build/log/idf_py_stdout_output_3663
Command: ninja all
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/grigoriew/Programs/esp32_dev/oled_clock/build/bootloader/esp-idf/esptool_py && /home/grigoriew/.espressif/python_env/idf5.5_py3.11_env/bin/python /home/grigoriew/Applications/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/grigoriew/Programs/esp32_dev/oled_clock/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/12] No install step for 'bootloader'
[3/12] Building C object esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj
FAILED: esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj 
/home/grigoriew/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1346-gcc9fb5bd5e-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/grigoriew/Programs/esp32_dev/oled_clock/build/config -I/home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect -I/home/grigoriew/Applications/esp/esp-idf/components/newlib/platform_include -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/config/include -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/config/include/freertos -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/config/xtensa/include -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/grigoriew/Applications/esp/esp-idf/components/freertos/esp_additions/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/include/soc -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/dma/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/grigoriew/Applications/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/grigoriew/Applications/esp/esp-idf/components/heap/include -I/home/grigoriew/Applications/esp/esp-idf/components/heap/tlsf -I/home/grigoriew/Applications/esp/esp-idf/components/log/include -I/home/grigoriew/Applications/esp/esp-idf/components/soc/include -I/home/grigoriew/Applications/esp/esp-idf/components/soc/esp32 -I/home/grigoriew/Applications/esp/esp-idf/components/soc/esp32/include -I/home/grigoriew/Applications/esp/esp-idf/components/soc/esp32/register -I/home/grigoriew/Applications/esp/esp-idf/components/hal/platform_port/include -I/home/grigoriew/Applications/esp/esp-idf/components/hal/esp32/include -I/home/grigoriew/Applications/esp/esp-idf/components/hal/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_rom/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_rom/esp32/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/grigoriew/Applications/esp/esp-idf/components/esp_rom/esp32 -I/home/grigoriew/Applications/esp/esp-idf/components/esp_common/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_system/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_system/port/soc -I/home/grigoriew/Applications/esp/esp-idf/components/esp_system/port/include/private -I/home/grigoriew/Applications/esp/esp-idf/components/xtensa/esp32/include -I/home/grigoriew/Applications/esp/esp-idf/components/xtensa/include -I/home/grigoriew/Applications/esp/esp-idf/components/xtensa/deprecated_include -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/include -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/include/apps -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/include/apps/sntp -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/lwip/src/include -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/port/include -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/port/freertos/include -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/grigoriew/Applications/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/grigoriew/Applications/esp/esp-idf/components/esp_wifi/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_wifi/include/local -I/home/grigoriew/Applications/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_event/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_phy/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_phy/esp32/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_netif/include -I/home/grigoriew/Applications/esp/esp-idf/components/nvs_flash/include -I/home/grigoriew/Applications/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/grigoriew/Programs/esp32_dev/oled_clock=. -fmacro-prefix-map=/home/grigoriew/Applications/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj -MF esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj.d -o esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj -c /home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect/wifi_connect.c
/home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect/wifi_connect.c: In function 'wifi_init_sta':
/home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect/wifi_connect.c:11:14: error: 'EXAMPLE' undeclared (first use in this function)
   11 | #define SSID EXAMPLE
      |              ^~~~~~~
/home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect/wifi_connect.c:73:33: note: in expansion of macro 'SSID'
   73 |                         .ssid = SSID,
      |                                 ^~~~
/home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect/wifi_connect.c:11:14: note: each undeclared identifier is reported only once for each function it appears in
   11 | #define SSID EXAMPLE
      |              ^~~~~~~
/home/grigoriew/Programs/esp32_dev/oled_clock/components/wifi_connect/wifi_connect.c:73:33: note: in expansion of macro 'SSID'
   73 |                         .ssid = SSID,
      |                                 ^~~~
[4/12] Linking C static library esp-idf/timesync/libtimesync.a
[5/12] Completed 'bootloader'
ninja: build stopped: subcommand failed.
